test/bad/modules/use03.px

use math hiding sin

sin(0.0)
